# gym-tracker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  build.yaml  config.yaml  docker-compose.yml  repository.yaml  run.sh
migrations/: 20240101000001_create_users.sql  20240101000002_create_exercises.sql  20240101000003_create_workout_sessions.sql  20240101000004_create_session_exercises.sql  20240101000005_create_exercise_logs.sql  20260225000001_add_exercise_details.sql  20260226000001_add_workout_duration.sql  20260226000002_create_personal_records.sql  20260226000003_add_set_type_and_notes.sql
src/: config.rs  db.rs  error.rs  main.rs  templates.rs
src/handlers/: auth.rs  calendar.rs  dashboard.rs  exercise.rs  export.rs  log.rs  mod.rs  plan.rs  records.rs  session.rs
src/middleware/: auth.rs
src/models/: exercise.rs  exercise_log.rs  mod.rs  personal_record.rs  session_exercise.rs  user.rs  workout_session.rs
static/css/: style.css
static/js/: app.js
templates/: base.html  calendar.html  dashboard.html  export.html  login.html  nav.html  register.html
templates/exercises/: detail.html  form.html  list.html
templates/logs/: detail.html  form.html  list.html
templates/plans/: list.html
templates/records/: list.html
templates/sessions/: detail.html  form.html  list.html  summary.html  workout.html
